# quadratube

./: .gitignore  CMakeLists.txt  LICENSE  README.md
designer/: designer.pro  designer.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodeandedge.cpp  nodeandedge.h
doc/: code.md  model.md
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/md/: bugs.md  kokkos.md
etc/: draw_grid_3.py  ovito_preset.txt
src/: main.cpp  metadata.h  test-inl.h
src/core/: energy.cpp  energy.h  math.h
src/model/: initializer.cpp  initializer.h  initializer3.cpp  initializer4.cpp  system.cpp  system.h
src/utils/: modifier.cpp  modifier.h
